Mon Sep 10 20:24:25 BST 2007  Olly Betts <olly@survex.com>

	* net/serialise.cc: Add missing "#include <string.h>".

Sun Sep 09 15:38:11 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_spelling.h,backends/flint/flint_synonym.h,
	  backends/flint/flint_table.h: Fix typo (Z_DEFAULT_COMPRESSION
	  where it should be Z_DEFAULT_STRATEGY) which meant that zlib
	  compression wasn't enabled for the spelling or synonym tables.

Fri Sep 07 19:31:44 BST 2007  Olly Betts <olly@survex.com>

	* docs/spelling.rst: Fix typo.

Thu Sep 06 15:02:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/editdistance.cc: Fix off-by-one error in loop bounds when
	  setting up fkp array initially.  Fixes bug #194.
	* tests/api_wrdb.cc: Add regression test for #194, spell5.

Thu Sep 06 14:31:15 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: More localised fix for preserving the
	  start of the valgrind report when in verbose mode.  Rework the code
	  which pulls out the start of the report to summarise why the test
	  failed.

Thu Sep 06 14:17:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/harness/testsuite.cc: When displaying valgrind output, seek
	  back to the start of the valgrind output for the current test
	  before dumping it to stdout: previously, the earlier check for the
	  valgrind error message to display (when not using -v) caused the
	  first 1024 bytes of the valgrind output to get dropped.

Tue Sep 04 20:13:29 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/multimatch.cc: For remote submatches, keep a count of
	  matches which we know exist, but we don't get passed from the
	  submatch.  These can be detected by checking for the lowerbound
	  on the matches in the submatch being greater than the index of
	  the last item in the returned submset.  When the match is over,
	  use this count, together with docs_matched, to adjust the lower