@@ -30,6 +30,8 @@
 
 #include "gnu_getopt.h"
 
+#include <string.h>
+
 using namespace Xapian;
 using namespace std;
 
