@@ -33,6 +33,8 @@
 #include <list>
 #include <string>
 
+#include <string.h>
+
 using namespace std;
 
 using namespace Xapian;
