@@ -1,3 +1,9 @@
+Mon Sep 10 21:34:23 BST 2007  Olly Betts <olly@survex.com>
+
+	* examples/delve.cc,examples/simpleexpand.cc,net/tcpserver.cc,
+	  queryparser/queryparser.cc,queryparser/queryparser.lemony: Add more
+	  missing "#include <string.h>" instances.
+
 Mon Sep 10 20:24:25 BST 2007  Olly Betts <olly@survex.com>
 
 	* net/serialise.cc: Add missing "#include <string.h>".
